--- a/inviteAll/conf/application.conf
+++ b/inviteAll/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="X=;nh2ZjTk0w?2GSF69u1JD=8@<UTl0QEaL4qccn96hT>g[j=bQ?Rf@ujsPF
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="de"
 
 # Global object class
 # ~~~~~
@@ -33,8 +33,8 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
 #
@@ -51,7 +51,7 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
