ADDED: Generating unique code automatically. ADDED: Adding guests if they are new to the data file (check if existent by first and last name).

--- a/inviteAll/conf/initial-data.yml
+++ b/inviteAll/conf/initial-data.yml
@@ -1,13 +1,10 @@
 guests:
 - !!models.Guest
    name: Heike
-   code: ABC
-   isGroup: false
+   lastName: Kemper
 - !!models.Guest
    name: Nick
-   code: SG
-   isGroup: false
+   lastName: Prühs
 - !!models.Guest
    name: Jan
-   code: SNYP
-   isGroup: false
+   lastName: Tammen
