ADDED: Sending invitation mail to all guests.

--- a/inviteAll/conf/prod.conf
+++ b/inviteAll/conf/prod.conf
@@ -7,3 +7,17 @@ include "application"
 # ~~~~~~~~
 
 db.default.password="" # Enter password to production database here, but don't check in.
+
+
+# Mailer (Don't check in sensible data!)
+# ~~~~~~~~
+
+smtp.mock = false
+smtp.user = ""
+smtp.password = 
+smtp.host = 
+smtp.port = 
+smtp.ssl = 
+
+play-easymail.from.email = ""
+play-easymail.from.name = 
