--- a/inviteAll/conf/application.conf
+++ b/inviteAll/conf/application.conf
@@ -50,6 +50,52 @@ db.default.password=""
 #
 ebean.default="models.*"
 
+# SMTP mailer settings
+# ~~~~~
+smtp {
+    # enable moocking - disable this for production
+    mock=true
+
+    # SMTP server
+    # (mandatory)
+    # defaults to gmail
+    host=smtp.gmail.com
+
+    # SMTP port
+    # defaults to 25
+    port=587
+
+    # Use SSL
+    # for GMail, this should be set to true
+    ssl=true
+
+    # authentication user
+    # Optional, comment this line if no auth
+    # defaults to no auth
+    user="you@gmail.com"
+
+    # authentication password
+    # Optional, comment this line to leave password blank
+    # defaults to no password
+    password=password
+}
+
+# Mailer
+# ~~~~~
+play-easymail {
+    from {
+        # Mailing from address
+        email="you@gmail.com"
+
+        # Mailing name
+        name="Your Name"
+
+        # Seconds between sending mail through Akka (defaults to 1)
+        # delay=1
+    }
+}
+
+
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
