--- a/inviteAll/conf/dev-dist.conf
+++ b/inviteAll/conf/dev-dist.conf
@@ -14,3 +14,15 @@ logger.com.jolbox=DEBUG
 #db.default.driver=org.h2.Driver
 #db.default.url="jdbc:h2:mem:play"
 db.default.logStatements=true
+
+# Mail
+# ~~~~
+smtp.mock = 
+smtp.user = 
+smtp.password = 
+smtp.host = 
+smtp.port = 
+smtp.ssl = 
+
+play-easymail.from.email = 
+play-easymail.from.name = 
